# arc-raiders-autoscrapper

./: .ctxlintrc.json  .editorconfig  .gitattributes  .gitignore  .ignore  .kilocodeignore  .lsp.json  .mcp.json  .mise.toml  .pr-body.md  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  REVIEW.md  TODO.md  VISION.md  audit-plan.md  benchmark_normalization.py  biome.json  commit_message.txt  debug_script.py  error.txt  fix.py  fix_biome.py  fix_biome2.py  ghalint.yaml  kilo.json  lsp.json  mcp.json  mise.toml  opencode.json  patch.diff  patch.py  patch_test.py  pr_description.md  pr_description.txt  pyproject.toml  (+4 more)
.claude/: ecc-tools.json  identity.json  settings.json
.claude/agents/: api-reviewer.md  config-reviewer.md  data-pipeline-reviewer.md  ocr-reviewer.md  performance-reviewer.md  progress-reviewer.md  rules-reviewer.md  scan-validator.md  security-reviewer.md  test-generator.md  tui-reviewer.md  visual-analysis-ocr.md
.claude/skills/add-fixture/: SKILL.md
.claude/skills/add-rule/: SKILL.md
.claude/skills/arc-raiders-autoscrapper/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/calibrate-vision/: SKILL.md
.claude/skills/ci-promote/: SKILL.md
.claude/skills/clean-debug/: skill.md
.claude/skills/config-bump/: SKILL.md
.claude/skills/corpus-replay/: SKILL.md
.claude/skills/data-snapshot-updater/: SKILL.md
.claude/skills/dead-code-sweep/: SKILL.md
.claude/skills/diagnose-scan/: skill.md
.claude/skills/dry-run/: SKILL.md
.claude/skills/failure-to-fix/: SKILL.md
.claude/skills/ocr-corpus-replay/: SKILL.md
.claude/skills/ocr-debug/: SKILL.md
.claude/skills/ocr-unavailable/: SKILL.md
.claude/skills/patch-update/: SKILL.md
.claude/skills/qlty-fix/: SKILL.md
.claude/skills/repo-janitor/: SKILL.md
.claude/skills/rules-reviewer/: SKILL.md
.claude/skills/scan-failed/: SKILL.md
.claude/skills/scan-report/: SKILL.md
.claude/skills/threshold-change/: SKILL.md
.claude/skills/threshold-corpus-replay/: SKILL.md
.claude/skills/triage-failures/: SKILL.md
.claude/skills/update-data/: SKILL.md
.claude/skills/upstream-sync/: SKILL.md
.claude/skills/verify/: SKILL.md
.codemogger/: index.db-wal
.codex/: AGENTS.md
.github/: copilot-instructions.md  dependabot.yml  lsp.json
.github/instructions/: bash.instructions.md  cicd-standards.instructions.md  cmd.instructions.md  code-review.instructions.md  file-reading-optimization.instructions.md  markdown.instructions.md  powershell.instructions.md  python.instructions.md  quality-standards.instructions.md  token-efficient.instructions.md
.github/skills/ai-tuning/: SKILL.md
.github/skills/app-builder/: SKILL.md  scaffolding.md
.github/skills/clean-code/: SKILL.md
.github/skills/code-maintenance/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/code-search/: SKILL.md
.github/skills/codebase-index/: SKILL.md
.github/skills/copilot-init/: SKILL.md
.github/skills/docker-expert/: SKILL.md
.github/skills/docs-writer/: SKILL.md
.github/skills/fix-issue/: SKILL.md
.github/skills/gh-cli/: SKILL.md
.github/workflows/: bandit.yml  biome.yml  black.yml  build.yml  ci.yml  copilot-setup-steps.yml  daily-data-update.yml  publish.yml  ruff.yml  tests.yml
.kilo/: CROSS_REFERENCE.md  commands  kilo.json  kilo.jsonc  kilocode.json  package.json
.kilo/agent/: interaction-reviewer.md
.kilo/agents/: api-reviewer.md  config-reviewer.md  data-pipeline-reviewer.md  interaction-reviewer.md  ocr-reviewer.md  performance-reviewer.md  progress-reviewer.md  rules-reviewer.md  scan-validator.md  security-reviewer.md  test-generator.md  tui-reviewer.md  visual-analysis-ocr.md
.kilo/commands/: precommit.md  setup-linux.md  setup-windows.md  validate.md
.kilo/plans/: 1775800844288-.md  1776090275388-.md  1776091974094-.md  1777178440393-.md
.kilo/plugins/: codemogger.ts  context-shield.ts  custom-tools.ts  json-healer.ts  openslimedit.ts  trim-tool-name.js
.kilo/rules/: custom-tools.md  rtk-rules.md  shell-strategy.md
.kilo/state/: context-shield.json
.kilo/tools/: ast_grep.ts  fastedit.ts  hashline_edit.ts  hashline_rg.ts  hashline_utils.ts  json_repair.ts
.kilocode/: config.json  mcp.json  rules.md
.kilocode/agent/: ocr-reviewer.md
.kilocode/command/: lint.md  precommit.md  scan-dryrun.md
.mise/tasks/: install
.omc/: prd.json  project-memory.json
.omc/skills/: biome-ignored-staged-files.md  git-shebang-executable.md
.opencode/: opencode.json  opencode.json.bak  package-lock.json
.opencode/agent/: interaction-reviewer.md  ocr-reviewer.md  rules-reviewer.md  scan-validator.md
.opencode/agents/: api-reviewer.md  config-reviewer.md  data-pipeline-reviewer.md  interaction-reviewer.md  ocr-reviewer.md  performance-reviewer.md  progress-reviewer.md  rules-reviewer.md  scan-validator.md  security-reviewer.md  tui-reviewer.md  visual-analysis-ocr.md
.opencode/chat/: semantic.sqlite
.opencode/command/: run-app.md  update-generated.md  validate.md
.opencode/commands/: add-fixture.md  add-rule.md  benchmark.md  calibrate-vision.md  ci-promote.md  clean-debug.md  config-bump.md  dead-code-sweep.md  diagnose-scan.md  lint.md  metaforge.md  ocr-corpus-replay.md  patch-update.md  precommit-fix.md  precommit.md  run-app.md  scan-dryrun.md  scan-report.md  setup-linux.md  setup-windows.md  setup.md  threshold-change.md  todo-scan.md  triage-failures.md  update-generated.md  validate.md  verify.md
.qlty/: qlty.toml
.qlty/configs/: .shellcheckrc  .yamllint.yaml
.serena/: project.yml
docs/: arctracker-api.md  data-sources.md  updater.md
scripts/: AGENTS.md  benchmark_tessdata_models.py  capture_ocr_fixture.py  refactor.py  replay_ocr_failure_corpus.py  setup-linux.sh  setup-windows.ps1  update_snapshot_and_defaults.py
src/autoscrapper/: AGENTS.md  __main__.py  app_warnings.py  config.py  warmup.py
tests/: AGENTS.md  conftest.py
tests/autoscrapper/: AGENTS.md  test_config.py  test_main.py  test_warmup.py
tests/scanner/: test_scan_loop.py
tests/scripts/: AGENTS.md  test_replay_ocr_failure_corpus.py
(+157 files in other folders)
